fix spacing

--- a/app/globals.scss
+++ b/app/globals.scss
@@ -137,7 +137,6 @@ ul {
   background-image: url(/back_image_a.jpg);
   background-size: cover;
   background-repeat: no-repeat;
-
   background-position: center;
   left: 0px;
   top: 0px;
@@ -150,7 +149,6 @@ ul {
   background-image: url(/back_image_b.jpg);
   background-size: cover;
   background-repeat: no-repeat;
-
   background-position: center;
   left: 0px;
   top: 100vh;
@@ -172,9 +170,6 @@ ul {
   background-image: url(/back_image_c.jpg);
   background-size: cover;
   background-repeat: no-repeat;
-
-  background-position: center;
-
   background-position: center;
   left: 0px;
   top: 200vh;
